--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
     "express": "^4.21.1"
+  },
+  "scripts": {
+    "start": "node OpenAPI/1234.opent1-getCustomAccount-s-rest-v1.js"
   }
 }
