--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,23 +22,52 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Install Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
-
       - name: Build and push Docker images
         run: |
           docker-compose build
           docker-compose push
 
+      - name: Check if SSH_PRIVATE_KEY is set
+        run: |
+          if [ -z "$SSH_PRIVATE_KEY" ]; then
+            echo "SSH_PRIVATE_KEY is not set or is empty!"
+            exit 1
+          else
+            echo "SSH_PRIVATE_KEY is set correctly."
+          fi
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+
       - name: Deploy to server
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
+          # Создание директории для ключа
           mkdir -p ~/.ssh
+          
+          # Сохранение ключа в файл
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/deploy_key
+          
+          # Установка прав доступа к ключу
           chmod 600 ~/.ssh/deploy_key
+
+          # Проверка, что файл создан
+          if [ ! -f ~/.ssh/deploy_key ]; then
+            echo "Deploy key was not created properly."
+            exit 1
+          else
+            echo "Deploy key was created successfully."
+          fi
+
+          # Проверка прав доступа к ключу
+          if [ $(stat -c "%a" ~/.ssh/deploy_key) -ne 600 ]; then
+            echo "Deploy key does not have correct permissions."
+            exit 1
+          else
+            echo "Deploy key has correct permissions."
+          fi
+
+          # Подключение к серверу и выполнение команд
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key aist@84.252.132.144 << 'EOF'
             cd /home/aist/bankingapi_stubs
             docker-compose pull
