--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -42,32 +47,10 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
-          # Создание директории для ключа
           mkdir -p ~/.ssh
-          
-          # Сохранение ключа в файл
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/deploy_key
-          
-          # Установка прав доступа к ключу
           chmod 600 ~/.ssh/deploy_key
 
-          # Проверка, что файл создан
-          if [ ! -f ~/.ssh/deploy_key ]; then
-            echo "Deploy key was not created properly."
-            exit 1
-          else
-            echo "Deploy key was created successfully."
-          fi
-
-          # Проверка прав доступа к ключу
-          if [ $(stat -c "%a" ~/.ssh/deploy_key) -ne 600 ]; then
-            echo "Deploy key does not have correct permissions."
-            exit 1
-          else
-            echo "Deploy key has correct permissions."
-          fi
-
-          # Подключение к серверу и выполнение команд
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key aist@84.252.132.144 << 'EOF'
             cd /home/aist/bankingapi_stubs
             docker-compose pull
