--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,11 +16,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Install Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -31,6 +26,7 @@ jobs:
         run: |
           docker-compose build
           docker-compose push
+        shell: /usr/bin/bash -e {0}
 
       - name: Check if SSH_PRIVATE_KEY is set
         run: |
@@ -40,20 +36,27 @@ jobs:
           else
             echo "SSH_PRIVATE_KEY is set correctly."
           fi
+        shell: /usr/bin/bash -e {0}
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Deploy to server
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/deploy_key
           chmod 600 ~/.ssh/deploy_key
 
+      - name: Check deploy key content
+        run: cat ~/.ssh/deploy_key
+
+      - name: Deploy to server using SSH
+        run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key aist@84.252.132.144 << 'EOF'
-            cd /home/aist/bankingapi_stubs
-            docker-compose pull
-            docker-compose down
-            docker-compose up -d
+          cd /home/aist/bankingapi_stubs
+          docker-compose pull
+          docker-compose down
+          docker-compose up -d
           EOF
+        shell: /usr/bin/bash -e {0}
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
