--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,6 +59,21 @@ jobs:
         run: cat ~/.ssh/deploy_key
         shell: /usr/bin/bash -e {0}
 
+      - name: Clone project on server
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key aist@84.252.132.144 << 'EOF'
+            cd /home/aist
+            if [ ! -d "bankingapi_stubs" ]; then
+              git clone https://github.com/Aisttt/bankingapi_stubs.git
+            else
+              cd bankingapi_stubs
+              git pull
+            fi
+          EOF
+        shell: /usr/bin/bash -e {0}
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+
       - name: Deploy to server using SSH
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key aist@84.252.132.144 << 'EOF'
